@@ -619,6 +619,16 @@ static int	zbx_snmp_set_result(const struct variable_list *var, unsigned char va
 	return ret;
 }
 
+static void	zbx_snmp_dump_oid(char *buffer, size_t buffer_len, const oid *objid, size_t objid_len)
+{
+	size_t	i, offset = 0;
+
+	*buffer = '\0';
+
+	for (i = 0; i < objid_len; i++)
+		offset += zbx_snprintf(buffer + offset, buffer_len - offset, ".%lu", (unsigned long)objid[i]);
+}
+
 #define ZBX_OID_INDEX_STRING	0
 #define ZBX_OID_INDEX_NUMERIC	1
 
@@ -1076,6 +1086,9 @@ retry:
 					zabbix_log(LOG_LEVEL_WARNING, "SNMP response from host \"%s\" contains"
 							" too many variable bindings", items[0].host.host);
 
+					if (1 != mapping_num)	/* give device a chance to handle a smaller request */
+						goto halve;
+
 					zbx_strlcpy(error, "Invalid SNMP response: too many variable bindings.",
 							max_error_len);
 
@@ -1087,8 +1100,11 @@ retry:
 
 			if (NULL == var)
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "SNMP response from host \"%s\" does not contain"
-						" all of the requested variable bindings", items[0].host.host);
+				zabbix_log(LOG_LEVEL_WARNING, "SNMP response from host \"%s\" contains"
+						" too few variable bindings", items[0].host.host);
+
+				if (1 != mapping_num)	/* give device a chance to handle a smaller request */
+					goto halve;
 
 				zbx_strlcpy(error, "Invalid SNMP response: too few variable bindings.", max_error_len);
 
@@ -1101,14 +1117,27 @@ retry:
 			if (parsed_oid_lens[j] != var->name_length ||
 					0 != memcmp(parsed_oids[j], var->name, parsed_oid_lens[j] * sizeof(oid)))
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "SNMP response from host \"%s\" does not contain"
-						" variable bindings in the requested order", items[0].host.host);
+				char	sent_oid[ITEM_SNMP_OID_LEN_MAX], received_oid[ITEM_SNMP_OID_LEN_MAX];
 
-				zbx_strlcpy(error, "Invalid SNMP response: variable bindings out of order.",
-						max_error_len);
+				zbx_snmp_dump_oid(sent_oid, sizeof(sent_oid), parsed_oids[j], parsed_oid_lens[j]);
+				zbx_snmp_dump_oid(received_oid, sizeof(received_oid), var->name, var->name_length);
 
-				ret = NOTSUPPORTED;
-				break;
+				if (1 != mapping_num)
+				{
+					zabbix_log(LOG_LEVEL_WARNING, "SNMP response from host \"%s\" contains"
+							" variable bindings that do not match the request:"
+							" sent \"%s\", received \"%s\"",
+							items[0].host.host, sent_oid, received_oid);
+
+					goto halve;	/* give device a chance to handle a smaller request */
+				}
+				else
+				{
+					zabbix_log(LOG_LEVEL_DEBUG, "SNMP response from host \"%s\" contains"
+							" variable bindings that do not match the request:"
+							" sent \"%s\", received \"%s\"",
+							items[0].host.host, sent_oid, received_oid);
+				}
 			}
 
 			/* process received data */
@@ -1149,10 +1178,9 @@ retry:
 		if (0 > i || i >= mapping_num)
 		{
 			zabbix_log(LOG_LEVEL_WARNING, "SNMP response from host \"%s\" contains"
-					" an out of bounds error index", items[0].host.host);
+					" an out of bounds error index: %ld", items[0].host.host, response->errindex);
 
-			zbx_snprintf(error, max_error_len, "Invalid SNMP response: error index out of bounds (%ld).",
-					response->errindex);
+			zbx_strlcpy(error, "Invalid SNMP response: error index out of bounds.", max_error_len);
 
 			ret = NOTSUPPORTED;
 			goto exit;
@@ -1202,7 +1230,7 @@ retry:
 		/* if querying with half the number of the last values does not work either, we resort to querying */
 		/* values one by one, and the next time configuration cache gives us items to query, it will give  */
 		/* us less. */
-
+halve:
 		if (*min_fail > mapping_num)
 			*min_fail = mapping_num;
 
